// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse demo -- collapse 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c10 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c13 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c6 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c12 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c6 .c14 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c6 .c7 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c6 .c9,
.c6 .c11 {
  line-height: 16px;
}

.c6 .c9 {
  padding-right: 20px;
}

.c6 .c11 {
  padding-left: 20px;
}

.c6 .c7 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c6 .c12 {
  left: 100%;
  margin-left: -19px;
}

.c6 .c14 {
  background: #9fecc0;
}

.c6 .c11 {
  display: none;
}

.c20 {
  margin-right: 8px;
  font-size: 14px;
}

.c18 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c18 .c19 {
  color: #4074e1;
}

.c21 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c21 .c19 {
  color: #526075;
}

.c16 .c17,
.c16 .style__CheckboxCardWrap-sc-19o5x2n-2 {
  margin-right: 8px;
}

.c16 .c17:last-child,
.c16 .style__CheckboxCardWrap-sc-19o5x2n-2:last-child {
  margin-right: 0;
}

.c26 {
  position: relative;
}

.c28 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c24 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c22 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c22 .c27 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c22 .c27::-webkit-input-placeholder {
  color: #abb4c3;
}

.c22 .c27::-moz-placeholder {
  color: #abb4c3;
}

.c22 .c27:-ms-input-placeholder {
  color: #abb4c3;
}

.c22 .c27::placeholder {
  color: #abb4c3;
}

.c22:hover {
  border-color: #4683e6;
}

.c22 .c27 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c22 .c23,
.c22 .c25 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c22 .c23:hover,
.c22 .c25:hover {
  color: #4074e1;
}

.c22 .c23 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c22 .c25 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        multiple
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c10"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        openKeys
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c16"
        >
          <span
            checked=""
            class="c17 c18"
          >
            <i
              class="c19 c20 uc-fe-icon icon__checkbox-ed "
              type="checkbox-ed"
            />
            0
          </span>
          <span
            class="c17 c21"
          >
            <i
              class="c19 c20 uc-fe-icon icon__checkbox "
              type="checkbox"
            />
            1
          </span>
          <span
            class="c17 c21"
          >
            <i
              class="c19 c20 uc-fe-icon icon__checkbox "
              type="checkbox"
            />
            2
          </span>
          <span
            class="c17 c21"
          >
            <i
              class="c19 c20 uc-fe-icon icon__checkbox "
              type="checkbox"
            />
            3
          </span>
          <span
            class="c17 c21"
          >
            <i
              class="c19 c20 uc-fe-icon icon__checkbox "
              type="checkbox"
            />
            4
          </span>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        panelCount
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c22"
        >
          <div>
            <span
              class="c23 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c24"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up "
                type="caret-up"
              />
            </span>
            <span
              class="c25 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c24"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down "
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c26"
          >
            <input
              autocomplete="off"
              class="c27 uc-fe-numberinput-input c28"
              min="1"
              step="1"
              value="5"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 0
        </div>
        <div
          class=""
          open=""
        >
          content 0
        </div>
      </div>
      <div>
        <div>
          panel 1
        </div>
      </div>
      <div>
        <div>
          panel 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
      </div>
      <div>
        <div>
          panel 4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- collapse-multiple 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        panel 1
      </div>
      <div
        class=""
        open=""
      >
        content 1
      </div>
    </div>
    <div>
      <div>
        panel 2
      </div>
      <div
        class=""
        open=""
      >
        content 2
      </div>
    </div>
    <div>
      <div>
        panel 3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        panel 1
      </div>
    </div>
    <div>
      <div>
        panel 2
      </div>
      <div
        class=""
        open=""
      >
        content 2
      </div>
    </div>
    <div>
      <div>
        panel 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- collapse-uncontrolled 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 1
        </div>
      </div>
      <div>
        <div>
          panel 2
        </div>
        <div
          class=""
          open=""
        >
          content 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
        <div
          class=""
          open=""
        >
          content 3
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 1
        </div>
      </div>
      <div>
        <div>
          panel 2
        </div>
        <div
          class=""
          open=""
        >
          content 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
        <div
          class=""
          open=""
        >
          content 3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c10 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c13 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c6 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c12 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c6 .c14 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c6 .c7 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c6 .c9,
.c6 .c11 {
  line-height: 16px;
}

.c6 .c9 {
  padding-right: 20px;
}

.c6 .c11 {
  padding-left: 20px;
}

.c6 .c7 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c6 .c12 {
  left: 100%;
  margin-left: -19px;
}

.c6 .c14 {
  background: #9fecc0;
}

.c6 .c11 {
  display: none;
}

.c16 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c16:hover {
  border-color: #4683e6;
}

.c16 .c12 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c16 .c14 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c16 .c7 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c16 .c9,
.c16 .c11 {
  line-height: 16px;
}

.c16 .c9 {
  padding-right: 20px;
}

.c16 .c11 {
  padding-left: 20px;
}

.c16 .c9 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        open
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          checked=""
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c10"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c16"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c10"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        customTitle
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c16"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c10"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel title
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-customTitle 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <div>
    <div>
      <div
        style="border:1px solid #ccc;height:28px;line-height:28px;padding:10px;"
      >
        title
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
          style="float:right;"
          type="button"
        >
          toggle
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-disabled 1`] = `
<div>
  <div>
    <div>
      Panel
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-forceRender 1`] = `
.c0 {
  display: none;
}

<div>
  <div>
    <div>
      Panel
    </div>
    <div
      class="c0"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-titlePosition 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class=""
        open=""
      >
        Content
      </div>
      <div>
        Panel
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-uncontrolled 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
</div>
`;
